# realm-js

./: .watchmanconfig  CMakeLists.txt  package.json
integration-tests/environments/react-native/src/: App.js
integration-tests/tests/src/: index.ts
integration-tests/tests/src/tests/: dictionary.ts  realm-constructor.ts
react-native/android/src/main/java/io/realm/react/: RealmReactModule.java
scripts/: build-android.js  test.sh
src/android/: CMakeLists.txt
src/common/object/jsc/: object.hpp
src/hermes/: hermes_init.cpp
tests/electron/: package-lock.json
tests/react-test-app/: .gitignore  .prettierrc.js  App.android.js  App.ios.js  app.json  package-lock.json  package.json
tests/react-test-app/android/: gradle.properties  settings.gradle
tests/react-test-app/android/app/: build.gradle
tests/react-test-app/android/app/src/main/: AndroidManifest.xml
tests/react-test-app/android/app/src/main/java/io/realm/react/testapp/: MainActivity.java  MainApplication.java
